# Electromagnetic-Waves-Scattering

./: .gitignore  .gitmodules  3918_cells.csv  3920_nodes.csv  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/combined/: bench_integrals_evaluation.cpp
benchmarks/combined/utils/: 18778_cells.csv
benchmarks/math/basic_benchmarks/: bench_math_operations.cpp
benchmarks/math/fourier/: bench_triple_toeplitz_3x3_fourier.cpp
benchmarks/results/: matmul_comparative_benchmark.json  one_layer_toeplitz_comparison_simple_and_blocked_matvec.json
examples/: 2002_nodes.csv  2050_cells.csv  CMakeLists.txt  Utils.hpp  esa_conv.py  esa_plot.py  pathes.hpp  rwg_to_csv.py  task_plate.cpp
examples/cylinder/: CMakeLists.txt  task_cylinder.cpp  task_cylinder_parallel.cpp  task_cylinder_scattered_field.cpp
examples/integration/: _task_integration.cpp  task_integration.cpp
examples/mesh_examples/: task_mesh_snapshot.cpp
examples/plate/: PlateGrid.hpp  task_plane_esa.cpp  task_plate.cpp  task_plate_2.cpp  task_plate_preconditioned.cpp  task_plate_with_surrounding_space.cpp
research/lattice/: CMakeLists.txt  Equations.hpp  EquationsWithToeplitzStructure.hpp  FieldCalculation.hpp  FieldOverGeometry.hpp  FieldsFill.hpp  GeneralEquation.hpp  GeneralizedEquations.hpp  SpecificLatticeEquations.hpp  lattice_formation.cpp  lattice_formation_analysis_of_blocks.cpp  lattice_formation_compressed_matrix.cpp  lattice_formation_real.cpp  lattice_formation_scientific.cpp  lattice_formation_simple.cpp  lattice_matvec_speed_up.cpp  lattice_time_calculations_for_large_structured.cpp  lattice_toeplitz_matrix_equivalence.cpp  preconditioner_study.cpp  shifted_structure.cpp
research/preconditioning/: CMakeLists.txt  study_on_analytial_solution.cpp
research/rupor/: CMakeLists.txt  Equations.hpp  FieldCalculation.hpp  esa_calculation.cpp  fields_comparison.cpp  first_calculation.cpp  ksv_calculation.cpp  one_test.cpp
research/scattering/: CMakeLists.txt  calculate_esa.cpp  calculate_scattered_field.cpp
research/volume_regular_dielectrics/: CMakeLists.txt  MatrixReplacement.hpp  MatrixTraits.hpp  Preconditioning.hpp  TripleToeplitzDielectric.hpp  cube.vtu  default_mesh_name.vtu  dielectric_sphere.cpp  full_calc.vtu  gmres_log_eps_222_1ggz.txt  regular_cube.cpp  sigma.csv  sigma_hh.csv  sigma_hh_71.csv  sigma_vv.csv  sigma_vv_13.csv  sigma_vv_33.csv  sigma_vv_51.csv  sigma_vv_51_esp_222.csv  sigma_vv_53.csv  sigma_vv_71.csv  sphere.vtu  toep_calc.vtu  toeplitz_example.cpp
src/: CMakeLists.txt  Types.hpp  Utils.hpp
src/consepts/: Consepts.hpp
src/equations/: EquationsOverGeometry.hpp
src/experiment/: ESA.cpp  ESA.hpp  PhysicalCondition.hpp  RSP.hpp  SWC.cpp
src/geometry/: HomogeneousStructure.cpp  HomogeneousStructure.hpp  PeriodicStructure.hpp  Scene.hpp  ShiftedPeriodicStructure.hpp
src/grid/: Grid.hpp  GridTypes.hpp  OBJParser.hpp
src/integration/: Integrate1D.hpp  Integrated2D.hpp  Quadrature.hpp
src/iterative_solvers/: SimpleIterationMethod.hpp
src/math/: GMRES_parallel.cpp  GMRES_parallel.hpp  MathConstants.hpp  Productions.hpp  SurfaceField.cpp  SurfaceField.hpp
src/mesh/: Algorithms.cpp  Algorithms.hpp  Mesh.cpp  Mesh.hpp  MeshBase.hpp  MeshTypes.cpp  MeshTypes.hpp  Parser.cpp  Parser.hpp  SurfaceMesh.cpp  SurfaceMesh.hpp  Utils.cpp  Utils.hpp  VTKFunctions.cpp  VTKFunctions.hpp  VolumeMesh.cpp  VolumeMesh.hpp
src/operators/: Functions.cpp  Functions.hpp  OperatorK.hpp  OperatorR.hpp  Operators.hpp
src/slae_generation/: Functions.cpp  Functions.hpp  MatrixGeneration.cpp  MatrixGeneration.hpp  Preconditioning.cpp  Preconditioning.hpp  RHS.cpp  RHS.hpp
src/types/: FunctionExtraction.hpp  TypeTraits.hpp  TypeTraitsUtils.hpp  Types.hpp
tests/: CMakeLists.txt  main.cpp  test_mesh_snapshot.cpp
tests/eigen/: test_eigen_vectors.cpp  test_matrix_free_context.cpp
tests/equations/: test_matrix_for.cpp
tests/geometry/: 10.vtu  12.vtu  2.vtu  3.vtu  7.vtu  8.vtu  default_mesh_name.vtu  shifted_hex_lattice.vtu  shifted_lattice.vtu  test_periodic_structure.cpp
tests/geometry_data/: geometry_data_0.vtu  geometry_data_1.vtu  geometry_data_10.vtu  geometry_data_11.vtu  geometry_data_12.vtu  geometry_data_13.vtu  geometry_data_14.vtu  geometry_data_15.vtu  geometry_data_16.vtu  geometry_data_17.vtu  geometry_data_18.vtu  geometry_data_19.vtu  geometry_data_2.vtu  geometry_data_20.vtu  geometry_data_21.vtu  geometry_data_22.vtu  geometry_data_23.vtu  geometry_data_24.vtu  geometry_data_27.vtu  geometry_data_3.vtu  geometry_data_31.vtu  geometry_data_33.vtu  geometry_data_36.vtu  geometry_data_37.vtu  geometry_data_38.vtu  geometry_data_39.vtu  geometry_data_4.vtu  geometry_data_41.vtu  geometry_data_42.vtu  geometry_data_44.vtu  geometry_data_45.vtu  geometry_data_47.vtu  geometry_data_48.vtu  geometry_data_49.vtu  geometry_data_5.vtu  geometry_data_51.vtu  geometry_data_54.vtu  geometry_data_55.vtu  geometry_data_57.vtu  geometry_data_6.vtu  (+15 more)
tests/integration/: plot_gauss_point.py  test_1d_integrate.cpp  test_2d_integrate.cpp  test_3d_integration.cpp  test_6d_integration.cpp  test_adaptive_integration.cpp  test_quadrature_points.cpp  test_triangular_integration.cpp
tests/math/: test_analytical_integration.cpp  test_productions.cpp  test_surface_field.cpp
tests/mesh/: test_algorithms.cpp  test_indexed_cell.cpp  test_mesh_generation.cpp  test_mesh_snapshot.cpp  test_parse_mesh.cpp  test_triangular_cell.cpp
tests/operators/: test_R_operator.cpp  test_operators.cpp  test_zones_of_k_operator.cpp
tests/research/: lattice_tests.hpp  test_active_plane_in_waveguide.cpp  test_comparison_of_automatic_assembling_with_manual.cpp
tests/slae_generation/: test_k_matrix.cpp  test_matrix.cpp  test_matrix_coefficients.cpp  test_r_matrix.cpp  test_rhs.cpp
tests/small_examples_of_real_tests/: test_double_toeplitz_over_homogenous_structure.cpp
tests/visualisation/: 3088_nodes.csv  default_mesh_name.vtu  test.vtkdefault_mesh_name.vtu  test_duplicated_nodes.cpp
visualisation/: CMakeLists.txt  VTKFunctions.cpp  VTKFunctions.hpp
visualisation/src/: VTKFunctions.cpp
(+384 files in other folders)
